[KRUMR001] User Employment feature implementation and API versioning (#9)
* [KRUMR001] user employment fix

* [KRUMR001] User Employment feature implementation and API versioning support

---------
